--- a/ILSpy/Controls/MainMenu.xaml
+++ b/ILSpy/Controls/MainMenu.xaml
@@ -46,8 +46,10 @@
 				          IsChecked="{Binding SessionSettings.CurrentCulture, Converter={local:CultureSelectionConverter}, ConverterParameter={x:Null}}" />
 				<MenuItem Header="English" IsCheckable="True"
 				          IsChecked="{Binding SessionSettings.CurrentCulture, Converter={local:CultureSelectionConverter}, ConverterParameter=en-US}" />
-				<MenuItem Header="中文" IsCheckable="True"
+				<MenuItem Header="中文(简体)" IsCheckable="True"
 				          IsChecked="{Binding SessionSettings.CurrentCulture, Converter={local:CultureSelectionConverter}, ConverterParameter=zh-Hans}" />
+				<MenuItem Header="中文(繁體)" IsCheckable="True"
+				          IsChecked="{Binding SessionSettings.CurrentCulture, Converter={local:CultureSelectionConverter}, ConverterParameter=zh-Hant}" />
 			</MenuItem>
 		</MenuItem>
 		<MenuItem x:Name="WindowMenuItem" Header="{x:Static properties:Resources._Window}" Tag="_Window">
